#97 Fix server-side Sonar code smells